# nirs4all-formats

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FORMATS_STATUS.md  LICENSE  MISSING_SAMPLES.md  README.md  cbindgen.toml
.github/ISSUE_TEMPLATE/: 01-request-format.yml  02-provide-samples.yml  03-report-bug.yml  04-request-binding.yml  config.yml
.github/workflows/: ci.yml  conformance.yml  release.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/nirs4all_formats/: __init__.py  _compat.py  records.py
bindings/python/python/nirs4all_io/: __init__.py  _compat.py  records.py
bindings/python/src/: lib.rs
bindings/python/src/nirs4all_io/: __init__.py  _compat.py
bindings/python/tests/: test_compat.py  test_records.py  test_sidecars.py
bindings/r/nirs4allformats/src/rust/: Cargo.toml
bindings/r/nirs4allformats/src/rust/src/: lib.rs
bindings/r/nirs4allio/src/rust/: Cargo.toml
bindings/r/nirs4allio/src/rust/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: sidecars.test.js  smoke.js
crates/nirs4all-formats/: Cargo.toml
crates/nirs4all-formats-capi/: Cargo.toml  build.rs
crates/nirs4all-formats-capi/examples/: probe_version.c
crates/nirs4all-formats-capi/include/: nirs4all_formats.h
crates/nirs4all-formats-capi/src/: lib.rs
crates/nirs4all-formats-cli/: Cargo.toml
crates/nirs4all-formats-cli/src/: main.rs
crates/nirs4all-formats-core/: Cargo.toml
crates/nirs4all-io/: Cargo.toml
crates/nirs4all-io-capi/: Cargo.toml  build.rs
crates/nirs4all-io-capi/examples/: probe_version.c
crates/nirs4all-io-capi/include/: nirs4all_io.h
crates/nirs4all-io-capi/src/: lib.rs
crates/nirs4all-io-cli/: Cargo.toml
crates/nirs4all-io-cli/src/: main.rs
crates/nirs4all-io-core/: Cargo.toml
crates/nirs4all-io-core/src/: error.rs  lib.rs  model.rs  sidecar.rs  signal.rs
crates/nirs4all-io/src/: lib.rs  registry.rs  sidecars.rs  walker.rs
crates/nirs4all-io/src/readers/: allotrope_adf.rs  allotrope_asm.rs  animl.rs  asd.rs  avantes_ascii.rs  avantes_binary.rs  bruker_dpt.rs  bruker_opus.rs  buchi_nircal.rs  csv_like.rs  digitalsurf.rs  envi_sli.rs  erdas_lan.rs  excel.rs  fgi_xml.rs  galactic_spc.rs  hamamatsu_img.rs  hdf5.rs  hdf5_helpers.rs  horiba_labspec.rs  jasco_jws.rs  jcamp.rs  matlab.rs  mod.rs  msa.rs  mzml.rs  netcdf.rs  nicolet_omnic.rs  numpy.rs  ocean_optics.rs  parquet.rs  perkin_elmer.rs  pp_systems.rs  renishaw_wdf.rs  scio_csv.rs  sed.rs  siware_api.rs  spectral_matrix.rs  spectral_table.rs  sun_photometer.rs  (+5 more)
crates/nirs4all-io/tests/: erdas_lan.rs  expected_refusals.rs  goldens.rs  new_real_samples.rs  open_bytes.rs  pp_systems.rs  probe.rs  readers.rs  real_samples.rs  sidecars.rs  walker.rs  witec_wip.rs
crates/nirs4all-io/tests/fixtures/hdf5_external/: build.py  primary_file.h5
crates/nirs4all-io/tests/goldens/: allotrope_asm_absorbance_spectrum.summary.json  allotrope_asm_emission_spectrum.summary.json  allotrope_asm_endpoint_absorbance.summary.json  animl_synthetic_nirs.summary.json  animl_synthetic_nirs_autoincrement.summary.json  asd_legacy_float.summary.json  asd_soil_real.summary.json  asd_v6_double.summary.json  asd_v7_field_double.summary.json  asd_v7_sample_double.summary.json  asd_v8_double.summary.json  avantes_avasoft8_ascii.summary.json  avantes_avasoft8_irr8.summary.json  avantes_avasoft8_raw.summary.json  avantes_irradiance.summary.json  avantes_legacy_dark.summary.json  avantes_legacy_scope.summary.json  avantes_legacy_trm.summary.json  avantes_legacy_trm_alt.summary.json  avantes_legacy_white.summary.json  avantes_wave_table.summary.json  avantes_wave_table_long_multi.summary.json  avantes_wave_table_sample_counts.summary.json  bruker_dpt_rs1_lightr.summary.json  bruker_dpt_synthetic.summary.json  bruker_opus_absorbance_multi.summary.json  bruker_opus_afsis_icr_087266_b2.summary.json  bruker_opus_afsis_icr_087273_g3.summary.json  bruker_opus_brukeropus_file.summary.json  bruker_opus_duplicate_absorbance.summary.json  bruker_opus_issue82.summary.json  bruker_opus_mmp_2107_test1.summary.json  bruker_opus_pierreroudier_test_spectra.summary.json  bruker_opus_reflectance.summary.json  bruker_opus_scpdata_background.summary.json  bruker_opus_scpdata_test.summary.json  buchi_nircal_foliar_transfer.summary.json  csv_auroranir_handheld_sensaifood.summary.json  csv_felix_f750_mango_slice.summary.json  csv_foss_xds_barleyground_sensaifood.summary.json  (+191 more)
docs/: CI_MATRIX.md  CLI.md  CONFORMANCE.md  DATA_MODEL.md  DIRECTIONS.md  FIXTURE_GOVERNANCE.md  FORMATS.md  FORMAT_GAPS.md  FORMAT_MATRIX.md  Formats_extract.md  IMPLEMENTATION_DASHBOARD.md  INTEGRATION_NIRS4ALL.md  LICENSE_MATRIX.md  MISSING_SAMPLES.md  OUTPUTS.md  PLAN.md  REDESIGN_FORMATS_AND_IO.md  RELEASE.md  REVERSE_ENGINEERING.md  ROADMAP.md  SECURITY.md  STATUS.md  SUPPORTED_FORMATS.md  VERSIONING.md  conf.py  getting_started.md  index.md  installation.md  requirements.txt  usage.md
docs/bindings/: capi.md  python.md  r.md  wasm.md
docs/dev/: IMPL_PLAN_2026_05_22.md  SIDECAR_RESOLVER.md
docs/formats/: allotrope-adf.md  allotrope-asm.md  andi-ms.md  animl.md  asd.md  avantes.md  bruker-opus.md  buchi-nircal.md  digitalsurf.md  envi-sli.md  erdas-lan.md  excel.md  felix-f750.md  fgi-hdf5-xml.md  foss-winisi.md  galactic-spc.md  hamamatsu-img.md  hdf5.md  horiba-labspec.md  jasco-jws.md  jcamp-dx.md  matlab.md  metrohm-vision.md  msa-iso22029.md  mzml.md  netcdf.md  nicolet-omnic.md  numpy.md  ocean-optics.md  parquet.md  perkin-elmer.md  pp-systems-unispec.md  renishaw-wdf.md  row-spectral-table.md  scio-csv.md  shimadzu-uvprobe.md  siware-api.md  siware-neospectra.md  spectral-evolution-sed.md  spectral-matrix.md  (+7 more)
samples/: README.md
samples/allotrope_adf/: README.md
samples/allotrope_asm/: README.md
samples/andi_ms/: README.md
samples/asd/: 3L9257.000  (+1 more)
scripts/: gen_synthetic.py
tools/reverse-lab/: README.md  pyproject.toml
tools/reverse-lab/src/nirs4all_reverse_lab/: __init__.py  bitdiff.py  cli.py
tools/reverse-lab/tests/: test_bitdiff.py
(+469 files in other folders)
