[package]
name = "nirs4all-io-python"
description = "Native PyO3 bindings for nirs4all-io."
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-io"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nirs4all-io = { path = "../../crates/nirs4all-io" }
nirs4all-io-core = { path = "../../crates/nirs4all-io-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
pythonize = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
