[package]
name = "nirs4all-formats-python"
description = "Native PyO3 bindings for nirs4all-formats."
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-formats"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nirs4all-formats = { path = "../../crates/nirs4all-formats" }
nirs4all-formats-core = { path = "../../crates/nirs4all-formats-core" }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
pythonize = "0.22"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
