[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "nirs4all-formats"
version = "0.1.0a0"
description = "Python bindings for the Rust-first nirs4all-formats NIRS loader."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "G. Beurier", email = "beurier@cirad.fr" }]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.24"]
pandas = ["pandas>=2.0"]
sklearn = ["scikit-learn>=1.3"]
torch = ["torch>=2.1"]
dev = ["pytest>=8", "ruff>=0.8", "mypy>=1.10", "maturin>=1.7"]

[tool.maturin]
python-source = "python"
module-name = "nirs4all_formats._native"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

# ---------------------------------------------------------------------------
# cibuildwheel configuration for the Phase 6 release pipeline (M4).
#
# The default build targets manylinux2014 on Linux (x86_64 + aarch64),
# macOS (x86_64 + arm64) and Windows (x86_64). Each wheel is built with the
# full feature set; the pure-Rust hdf5-reader / netcdf-reader make this
# portable without C dependencies. If a future feature breaks a specific
# platform, document the fallback in `docs/RELEASE.md` and disable it via
# `[tool.cibuildwheel.overrides]` rather than pre-emptively in this block.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit Windows and musllinux for the initial release; the audience
# is server-side / data-science where manylinux + glibc is the norm.
skip = "*-win32 *-musllinux* pp*"
test-command = "python -m pytest {project}/bindings/python/tests"
test-extras = ["numpy"]
before-all = "pip install maturin"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
before-all = "yum install -y openssl-devel || apt-get install -y libssl-dev || true"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
