[package]
name = "nirs4all-io-wasm"
description = "WebAssembly bindings for nirs4all-io."
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-io"
publish = false

[lib]
name = "nirs4all_io_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
# `fmt-hdf5` stays off in the default WASM build because `hdf5-reader`
# 0.5.0 hard-codes `read_exact_at` only under `#[cfg(unix)]` and
# `#[cfg(windows)]`. On `wasm32-unknown-unknown` neither cfg matches and
# `FileStorage::read_range` references an undeclared function, so the
# crate fails to compile even when we only use `BytesStorage`. Upstream
# fix tracked in docs/dev/SIDECAR_RESOLVER.md; the rest of the WASM
# surface (ENVI Standard / ENVI SLI / AVIRIS LAN sidecars) works
# already.
nirs4all-io = { path = "../../crates/nirs4all-io", default-features = false }
nirs4all-io-core = { path = "../../crates/nirs4all-io-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
console-errors = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
