[package]
name = "nirs4all-io-wasm"
description = "WebAssembly bindings for nirs4all-io."
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
authors = ["G. Beurier <beurier@cirad.fr>"]
repository = "https://github.com/GBeurier/nirs4all-io"
publish = false

[lib]
name = "nirs4all_io_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
nirs4all-io = { path = "../../crates/nirs4all-io", default-features = false }
nirs4all-io-core = { path = "../../crates/nirs4all-io-core" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

# Pull the upstream wasm32 linkability fix (merge commit of PR #46)
# until it is published as hdf5-reader 0.5.1. Remove this patch and
# bump the `hdf5-reader` requirement once 0.5.1 lands on crates.io.
[patch.crates-io]
hdf5-reader = { git = "https://github.com/roteiro-gis/netcdf-rust", rev = "f0cdd2f0dbd2c6a036fc18cc4ae58d4072d7cb0b" }

[features]
default = ["fmt-hdf5"]
# HDF5/NetCDF-backed readers (generic HDF5, FGI XML+HDF5, NetCDF MFRSR,
# Allotrope ADF) for the WASM build. Relies on the upstream
# `read_exact_at` wasm fix pulled by the `[patch.crates-io]` above.
# `fmt-matlab` / `fmt-parquet` stay off (no wasm-side need yet).
fmt-hdf5 = ["nirs4all-io/fmt-hdf5"]
console-errors = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = "thin"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
