[package]
name = "nirs4all-io-core"
description = "Core data model and low-level contracts for nirs4all-io."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
