[package]
name = "nirs4all-io"
description = "Rust-first NIRS and spectroscopy file loading facade."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nirs4all-io-core.workspace = true
hdf5-reader = "0.5.0"
matfile = "0.5.0"
netcdf-reader = "0.5.0"
quick-xml = "0.40.1"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
