[package]
name = "nirs4all-io"
description = "Rust-first NIRS and spectroscopy file loading facade."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = ["formats-all"]
# Convenience meta-feature enabling every reader.
formats-all = ["fmt-hdf5", "fmt-matlab", "fmt-parquet"]
# HDF5/NetCDF-backed readers (Hdf5, NetCDF, Allotrope ADF, FGI XML+HDF5).
# Required by `fmt-matlab` because MATLAB v7.3 files are HDF5 containers.
fmt-hdf5 = ["dep:hdf5-reader", "dep:netcdf-reader"]
# MATLAB MAT v5 + v7.3 and prospectr RData (xz/zstd-encoded R workspaces).
fmt-matlab = ["dep:matfile", "dep:xz2", "dep:rds2rust", "fmt-hdf5"]
# Apache Parquet tables produced by NIRS pipelines.
fmt-parquet = ["dep:parquet", "dep:arrow-array", "dep:arrow-schema"]

[dependencies]
nirs4all-io-core.workspace = true
arrow-array = { version = "58.3.0", optional = true }
arrow-schema = { version = "58.3.0", optional = true }
calamine = "0.35.0"
cfb = "0.14.0"
flate2 = "1.1.5"
hdf5-reader = { version = "0.5.0", optional = true }
matfile = { version = "0.5.0", optional = true }
netcdf-reader = { version = "0.5.0", optional = true }
parquet = { version = "58.3.0", optional = true, default-features = false, features = ["arrow", "zstd"] }
quick-xml = "0.40.1"
rds2rust = { version = "0.1.41", optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
xz2 = { version = "0.1.7", optional = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
