[package]
name = "nirs4allio-r"
version = "0.1.0-alpha.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]
name = "nirs4allio_r"

[dependencies]
extendr-api = { version = "0.7", default-features = false }
nirs4all-io = { path = "../../../../../crates/nirs4all-io" }
nirs4all-io-core = { path = "../../../../../crates/nirs4all-io-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 2
lto = "thin"
